apps/external/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-external
  namespace: external
  labels:
    app.kubernetes.io/name: whoami-external
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami-external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami-external
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.3
          ports:
            - name: http
              containerPort: 80
