apps/external/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-external
  namespace: external
spec:
  selector:
    app.kubernetes.io/name: whoami-external
  ports:
    - name: http
      port: 80
      targetPort: http
